<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>NavigationTest</class>
 <widget class="QWidget" name="NavigationTest">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>743</width>
    <height>562</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout">
   <item>
    <widget class="Navigation" name="listView1"/>
   </item>
   <item>
    <widget class="Navigation" name="listView2"/>
   </item>
   <item>
    <widget class="Navigation" name="listView3"/>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>Navigation</class>
   <extends>QListView</extends>
   <header>navigation.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
